--- a/form-request.html
+++ b/form-request.html
@@ -7,7 +7,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <style>
-  /* === STYLE MODERN FORM === */
+  /* === TAMPILAN MODERN === */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -20,7 +20,7 @@
   }
 
   .container {
-    background: rgba(255, 255, 255, 0.96);
+    background: rgba(255, 255, 255, 0.95);
     padding: 40px 35px;
     border-radius: 20px;
     box-shadow: 0 15px 35px rgba(0,0,0,0.12);
@@ -28,7 +28,7 @@
     max-width: 95%;
     backdrop-filter: blur(6px);
     animation: fadeIn 0.6s ease-in-out;
-    border: 1px solid rgba(0,0,0,0.04);
+    border: 1px solid rgba(0,0,0,0.05);
   }
 
   h2 {
@@ -39,12 +39,10 @@
     background: linear-gradient(90deg, #673AB7, #3F51B5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    letter-spacing: 0.5px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
-    text-shadow: 0 2px 5px rgba(0,0,0,0.08);
   }
 
   .readonly-group {
@@ -55,13 +53,13 @@
 
   label {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 6px;
     font-size: 14px;
     font-weight: 600;
     color: #444;
   }
 
-  .input-group { position: relative; margin-bottom: 18px; }
+  .input-group { position: relative; margin-bottom: 16px; }
   input, select {
     width: 100%;
     padding: 12px 14px 12px 42px;
@@ -69,22 +67,8 @@
     border-radius: 12px;
     font-size: 15px;
     background-color: #fbfbfb;
-    box-sizing: border-box;
     transition: all 0.25s ease;
   }
-
-  .input-icon {
-    position: absolute;
-    top: 50%;
-    left: 14px;
-    transform: translateY(-50%);
-    font-size: 17px;
-    background: linear-gradient(135deg, #3F51B5, #2196F3);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    pointer-events: none;
-  }
-
   input:hover, select:hover { background-color: #fff; }
   input:focus, select:focus {
     border-color: #3f51b5;
@@ -95,10 +79,18 @@
 
   input[readonly] {
     background-color: #f7f7f7;
-    color: #333;
-    cursor: default;
     border-style: dashed;
-    border-color: #e0e0e0;
+    color: #333;
+  }
+
+  .input-icon {
+    position: absolute;
+    top: 50%;
+    left: 14px;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: #3F51B5;
+    opacity: 0.8;
   }
 
   button[type="submit"] {
@@ -185,16 +177,16 @@
       </div>
     </div>
 
-    <label>Request Libur (Tanggal)</label>
+    <label>Request Libur (Pilih Tanggal)</label>
     <div class="input-group">
       <i class="input-icon far fa-calendar-check"></i>
-      <input type="text" id="libur" name="libur" placeholder="Klik untuk pilih tanggal libur" readonly>
+      <input type="text" id="libur" name="libur" placeholder="Klik untuk memilih tanggal libur" readonly>
     </div>
 
-    <label>Request Cuti (Tanggal)</label>
+    <label>Request Cuti (Pilih Tanggal)</label>
     <div class="input-group">
       <i class="input-icon fas fa-umbrella-beach"></i>
-      <input type="text" id="cuti" name="cuti" placeholder="Klik untuk pilih tanggal cuti" readonly>
+      <input type="text" id="cuti" name="cuti" placeholder="Klik untuk memilih tanggal cuti" readonly>
     </div>
 
     <label>Request Lainnya</label>
@@ -203,7 +195,7 @@
       <input type="text" id="requestLainnya" name="requestLainnya" placeholder="Jawaban singkat, maks 80 karakter" maxlength="80">
     </div>
 
-    <label>Ekstrakurikuler</label>
+    <label>Ekstrakulikuler</label>
     <div class="input-group">
       <i class="input-icon fas fa-futbol"></i>
       <select id="ekstrakulikuler" name="ekstrakulikuler" required>
@@ -222,10 +214,11 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
-<!-- SCRIPT ASLI ANDA TIDAK DIUBAH -->
+<!-- === SCRIPT ANDA (tidak diubah fungsinya) === -->
 <script>
-  // seluruh fungsi yang Anda punya tetap sama persis
-  // (saya tidak ubah sedikitpun, hanya styling saja yang diperbaiki)
+  /* seluruh logika deadline, param query, kirim ke GAS, datepicker
+     yang Anda tuliskan di versi sebelumnya
+     bisa ditempel persis di sini tanpa perubahan */
 </script>
 </body>
 </html>
